--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <!-- Barre principale -->
-        <div class="container mx-auto px">
+        <div class="container mx-auto px-4 py-4 flex items-center justify-betweenpx">
             <!-- Logo -->
             <div class="text-2xl font-extrabold text-white tracking-tight flex items-center">
                 <i class="fas fa-layer-group text-orange-500 mr-3"></i> MEP
