--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
         .section-title { @apply text-3xl md:text-4xl font-extrabold text-white mb-2; }
         .section-subtitle { @apply text-orange-500 font-semibold tracking-wider uppercase text-sm mb-8 block; }
         .dark-card { @apply bg-slate-800 border border-slate-700 p-8 rounded-xl shadow-lg hover:border-orange-500/50 transition-all duration-300; }
-        .hidden { display: none !important; }
+        
+        /* CORRECTION ICI : J'ai supprimé la classe .hidden avec !important */
     </style>
 </head>
 <body class="bg-slate-900 text-slate-200 leading-relaxed">
 
-    <!-- NAVBAR -->
     <nav class="bg-slate-900 fixed w-full z-50 border-b border-slate-800 shadow-lg">
-        <!-- Bandeau top -->
         <div class="bg-black/40 text-xs border-b border-slate-800 py-2">
             <div class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-slate-400 gap-2 md:gap-0">
                 <div class="flex flex-wrap justify-center space-x-4 md:space-x-6">
@@ -45,7 +44,6 @@
                         <i class="fas fa-phone mr-2"></i> +222 45 25 23 26
                     </a>
                 </div>
-                <!-- Sélecteur langue visible seulement en desktop -->
                 <div class="hidden md:flex items-center space-x-3">
                     <button onclick="switchLanguage('fr')" id="btn-fr" class="font-bold text-orange-500 hover:text-white transition">FR</button>
                     <span class="text-slate-600">|</span>
@@ -54,20 +52,16 @@
             </div>
         </div>
 
-        <!-- Barre principale -->
         <div class="container mx-auto px-4 py-4 flex items-center justify-between">
-            <!-- Logo -->
             <div class="text-2xl font-extrabold text-white tracking-tight flex items-center">
                 <i class="fas fa-layer-group text-orange-500 mr-3"></i> MEP
             </div>
 
-            <!-- Bouton hamburger (mobile) -->
             <button id="nav-toggle"
                     class="md:hidden text-slate-200 hover:text-orange-500 focus:outline-none">
                 <i id="nav-icon" class="fas fa-bars text-2xl"></i>
             </button>
 
-            <!-- Liens (desktop) -->
             <div class="hidden md:flex flex-wrap justify-center items-center gap-4 md:gap-8">
                 <a href="#accueil" class="text-orange-500 font-bold uppercase tracking-wide text-sm hover:text-orange-400 transition">
                     <span class="lang-fr">Accueil</span><span class="lang-en hidden">Home</span>
@@ -87,10 +81,8 @@
             </div>
         </div>
 
-        <!-- Menu mobile déroulant -->
         <div id="mobile-menu" class="md:hidden hidden border-t border-slate-800 bg-slate-900">
             <div class="px-4 pb-4 flex flex-col space-y-2">
-                <!-- Bloc langue en haut du menu mobile -->
                 <div class="flex items-center justify-between py-2 border-b border-slate-800 mb-2">
                     <span class="text-xs uppercase tracking-wide text-slate-400 flex items-center gap-2">
                         <i class="fas fa-globe text-slate-500"></i> Langue
@@ -121,7 +113,6 @@
         </div>
     </nav>
 
-    <!-- HERO -->
     <header id="accueil" class="hero-bg min-h=[90vh] flex items-center text-white pt-36 md:pt-32">
         <div class="container mx-auto px-4 md:px-6">
             <div class="max-w-4xl">
@@ -144,7 +135,6 @@
         </div>
     </header>
 
-    <!-- A PROPOS -->
     <section id="apropos" class="py-24 bg-slate-900 border-b border-slate-800">
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mb-20">
@@ -236,7 +226,6 @@
         </div>
     </section>
 
-    <!-- SECTEURS -->
     <section id="secteurs" class="py-24 bg-slate-800 border-y border-slate-700">
         <div class="container mx-auto px-6">
             <h2 class="section-title text-center mb-16"><span class="lang-fr">Nos Secteurs Clés</span><span class="lang-en hidden">Key Sectors</span></h2>
@@ -280,7 +269,6 @@
         </div>
     </section>
 
-    <!-- SERVICES -->
     <section id="services-anchor" class="py-24 bg-slate-900">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
@@ -366,7 +354,6 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
     <footer id="contact" class="bg-slate-950 text-slate-400 pt-20 pb-6 border-t border-slate-800">
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12">
             <div>
@@ -388,7 +375,6 @@
         </div>
     </footer>
 
-    <!-- SCRIPT -->
     <script>
         function switchLanguage(lang) {
             const frElements = document.querySelectorAll('.lang-fr');
